@@ -1,5 +1,6 @@
 = ActiveMerchant CHANGELOG
 
+* Remove duplicate attr_reader definitions from all gateways [cody]
 * Remove useless tests raising Error [cody]
 * Update gateway templates [cody]
 * Fix Authorize.net test where authorize() was being called instead of purchase(). Perform some cleanup of the tests [ianlotin...@hotmail.com, cody]
